start to implement _changes watcher that provisions databases

--- a/attachments/pages/index.html
+++ b/attachments/pages/index.html
@@ -171,11 +171,10 @@ SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. -->
       <form class="dataset_setup">
         <h1>Create a new dataset</h1>
         <label for="nickname">Give it a name:
-          <input type="text" name="nickname" value="{{nickname}}">
+          <input type="text" name="name" value="">
         </label>
         <input type="submit" class="button" value="Create  &rarr;">
         <div class="cancel">or Cancel</div>
-        <input type="hidden" name="userCtxName" value="{{name}}" id="userCtxName">
       </form>
     </div>
   </script>
