hooking up refine UI to newly created datasets

--- a/attachments/pages/recline.html
+++ b/attachments/pages/recline.html
@@ -2,10 +2,10 @@
 <html lang="en"> 
 <head> 
 	<meta charset="utf-8"> 
-	<title>CouchDB Data Explorer</title> 
+	<title>DataCouch Editor</title> 
   <link rel="stylesheet" href="style/reset.css" media="screen">
 	<link rel="stylesheet" href="style/data-table.css" media="screen"> 
-	<link rel="stylesheet" href="style/style.css" media="screen">
+	<link rel="stylesheet" href="style/recline.css" media="screen">
 	<script type="text/javascript" src="script/lib/jquery-1.6.1.min.js"></script>
   <!-- only using jqueryui for draggable - a lighter solution would be nice -->
 	<script type="text/javascript" src="script/lib/jquery-ui-1.8.14.custom.min.js"></script>
@@ -17,10 +17,10 @@
 	<script type="text/javascript" src="script/lib/microevent.js"></script>
 	<script type="text/javascript" src="script/lib/traverse.js"></script>
 	<script type="text/javascript" src="script/lib/pouchdb.js"></script>
-	<script type="text/javascript" src="script/util.js"></script>
-	<script type="text/javascript" src="script/costco.js"></script>
-	<script type="text/javascript" src="script/recline.js"></script>
-	<script type="text/javascript" src="script/site.js"></script>
+	<script type="text/javascript" src="script/lib/util.js"></script>
+	<script type="text/javascript" src="script/lib/costco.js"></script>
+	<script type="text/javascript" src="script/lib/recline.js"></script>
+	<script type="text/javascript" src="script/edit.js"></script>
 </head> 
 <body class="bod">
 	<div class="container">
