--- a/attachments/pages/index.html
+++ b/attachments/pages/index.html
@@ -31,19 +31,19 @@ SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. -->
 <head>
   <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
   <title>DataCouch | Home</title>
+  <link rel='shortcut icon' href='images/favicon.ico' type='image/x-icon' />
+  <link rel='stylesheet' media='all' href='style/reset.css' />
+  <link rel='stylesheet' media='all' href='style/home.css' />
   <script type='text/javascript' src='script/lib/jquery-1.6.1.min.js'></script>
   <script type='text/javascript' src='script/lib/jquery.couch2.js'></script>
   <script type='text/javascript' src='script/lib/sammy-0.6.3.min.js'></script>
   <script type='text/javascript' src='script/lib/jquery.mustache.js'></script>
   <script type='text/javascript' src='script/lib/microevent.js'></script>
   <script type="text/javascript" src="script/lib/md5.js"></script>
+  <script type='text/javascript' src='script/lib/util.js'></script>
+  <script type='text/javascript' src='script/lib/monocles.js'></script>
   <script src="https://browserid.org/include.js" type="text/javascript"></script>
-  <script type='text/javascript' src='script/util.js'></script>
-  <script type='text/javascript' src='script/site.js'></script>
-  <script type='text/javascript' src='script/monocles.js'></script>
-  <link rel='shortcut icon' href='images/favicon.ico' type='image/x-icon' />
-  <link rel='stylesheet' media='all' href='style/reset.css' />
-  <link rel='stylesheet' media='all' href='style/home.css' />
+  <script type='text/javascript' src='script/home.js'></script>
 </head>
 <body>
   <div class='header limiter'>
