--- a/attachments/pages/index.html
+++ b/attachments/pages/index.html
@@ -38,6 +38,7 @@ SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. -->
   <script type='text/javascript' src='script/lib/jquery.couch2.js'></script>
   <script type='text/javascript' src='script/lib/sammy-0.6.3.min.js'></script>
   <script type='text/javascript' src='script/lib/jquery.mustache.js'></script>
+  <script type='text/javascript' src='script/lib/underscore.js'></script>
   <script type='text/javascript' src='script/lib/microevent.js'></script>
   <script type="text/javascript" src="script/lib/md5.js"></script>
   <script type='text/javascript' src='script/lib/util.js'></script>
@@ -68,6 +69,8 @@ SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. -->
       </li>
     </ul>
   </div>
+  
+  <div class="datasets"></div>
   
   <div class="dialog-overlay" style="display: none; z-index: 101; ">&nbsp;</div>
   <div class="dialog ui-draggable" style="display: none; z-index: 102; top: 101px; ">
@@ -155,6 +158,23 @@ SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. -->
         <input type="hidden" name="userCtxName" value="{{name}}" id="userCtxName">
       </form>
     </div>
+  </script>
+  
+  
+  <script type="text/mustache" class="datasetsTemplate">
+    <ul class='download clearfix'>
+    {{#datasets}}
+      <li>
+        <h3>{{value}}</h3>
+        <a class='download' href='{{url}}'>
+          <span class='icon osx'></span>
+          <strong>this is a dataset</strong>
+          <span class='size'>it has a size</span>
+          <span class='description'>it also has a short to medium to long description</span>
+        </a>
+      </li>
+    {{/datasets}}
+    </ul>
   </script>
   
   <script type="text/mustache" class="userActionsTemplate">
