route to user profiles

--- a/attachments/pages/index.html
+++ b/attachments/pages/index.html
@@ -175,6 +175,7 @@ SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. -->
       </li>
     {{/datasets}}
     </ul>
+    {{^datasets}}<center><h1>{{name}} doesn't have any datasets yet!</h1></center>{{/datasets}}
   </script>
   
   <script type="text/mustache" class="userActionsTemplate">
