--- a/attachments/pages/index.html
+++ b/attachments/pages/index.html
@@ -164,15 +164,15 @@ SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. -->
   <script type="text/mustache" class="datasetsTemplate">
     <ul class='download clearfix'>
     {{#datasets}}
-      <li>
-        <h3>{{value}}</h3>
-        <a class='download' href='{{url}}'>
-          <span class='icon osx'></span>
-          <strong>this is a dataset</strong>
-          <span class='size'>it has a size</span>
-          <span class='description'>it also has a short to medium to long description</span>
-        </a>
-      </li>
+      <a class='download' href='{{url}}'>
+        <li>
+          <h3>{{value}}</h3>
+            <span class='icon osx'></span>
+            <strong>this is a dataset</strong>
+            <span class='size'>it has a size</span>
+            {{#description}}<span class='description'>{{description}}</span>{{/description}}
+        </li>
+      </a>
     {{/datasets}}
     </ul>
     {{^datasets}}<center><h1>{{name}} doesn't have any datasets yet!</h1></center>{{/datasets}}
