--- a/attachments/pages/index.html
+++ b/attachments/pages/index.html
@@ -38,6 +38,7 @@ SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. -->
   <script type='text/javascript' src='script/lib/jquery.couch2.js'></script>
   <script type='text/javascript' src='script/lib/sammy-0.6.3.min.js'></script>
   <script type='text/javascript' src='script/lib/jquery.mustache.js'></script>
+  <script type='text/javascript' src='script/lib/jquery.url.js'></script>
   <script type='text/javascript' src='script/lib/underscore.js'></script>
   <script type='text/javascript' src='script/lib/microevent.js'></script>
   <script type="text/javascript" src="script/lib/md5.js"></script>
