tidying up styles a bit

--- a/attachments/pages/index.html
+++ b/attachments/pages/index.html
@@ -217,5 +217,12 @@ SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. -->
   <script type="text/mustache" class="formLoadingTemplate">
     <h1>Loading! Please hold on...</h1>
   </script>
+  
+  <script type="text/mustache" class="creatingDatasetTemplate">
+    <div id="loading-message">
+      <img src="images/large-spinner.gif">
+      <span> Creating dataset...</span>
+    </div>
+  </script>
   </body>
 </html>
