--- a/attachments/pages/recline.html
+++ b/attachments/pages/recline.html
@@ -29,7 +29,7 @@
     <ul class="menu">
     </ul>
     <div id="header">
-      <a href="http://github.com/maxogden/recline"><img id="couchLogo" src="images/couch.png"/></a>
+      <a class="homeButton" href="#/"><img id="couchLogo" src="images/fancycouch-small.png"/></a>
       <div class="project-title"></div>
       <div class="project-actions"></div>
       <div class="project-controls"></div>
