rewrite user dataset display code

--- a/attachments/pages/index.html
+++ b/attachments/pages/index.html
@@ -193,6 +193,10 @@ SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. -->
     {{^datasets}}<center><h1>{{name}} doesn't have any datasets yet!</h1></center>{{/datasets}}
   </script>
   
+  <script type="text/mustache" class="noUserTemplate">
+    <center><h1>There is no user named {{name}} :(</h1></center>
+  </script>
+  
   <script type="text/mustache" class="userActionsTemplate">
     <a href="#new">
       <div class="option new_dataset">
