--- a/attachments/pages/recline.html
+++ b/attachments/pages/recline.html
@@ -18,9 +18,9 @@
 	<script type="text/javascript" src="script/lib/microevent.js"></script>
 	<script type="text/javascript" src="script/lib/traverse.js"></script>
 	<script type="text/javascript" src="script/lib/pouchdb.js"></script>
-	<script type="text/javascript" src="script/lib/util.js"></script>
-	<script type="text/javascript" src="script/lib/costco.js"></script>
-	<script type="text/javascript" src="script/lib/recline.js"></script>
+	<script type="text/javascript" src="script/util.js"></script>
+	<script type="text/javascript" src="script/costco.js"></script>
+	<script type="text/javascript" src="script/recline.js"></script>
 	<script type="text/javascript" src="script/edit.js"></script>
 </head> 
 <body class="bod">
