--- a/attachments/pages/index.html
+++ b/attachments/pages/index.html
@@ -34,6 +34,7 @@ SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. -->
   <link rel='shortcut icon' href='images/favicon.ico' type='image/x-icon' />
   <link rel='stylesheet' media='all' href='style/reset.css' />
   <link rel='stylesheet' media='all' href='style/home.css' />
+  <script src="https://browserid.org/include.js" type="text/javascript"></script>
   <script type='text/javascript' src='script/lib/jquery-1.6.1.min.js'></script>
   <script type='text/javascript' src='script/lib/jquery.couch2.js'></script>
   <script type='text/javascript' src='script/lib/sammy-0.6.3.min.js'></script>
@@ -42,9 +43,8 @@ SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. -->
   <script type='text/javascript' src='script/lib/underscore.js'></script>
   <script type='text/javascript' src='script/lib/microevent.js'></script>
   <script type="text/javascript" src="script/lib/md5.js"></script>
-  <script type='text/javascript' src='script/lib/util.js'></script>
-  <script type='text/javascript' src='script/lib/monocles.js'></script>
-  <script src="https://browserid.org/include.js" type="text/javascript"></script>
+  <script type='text/javascript' src='script/util.js'></script>
+  <script type='text/javascript' src='script/monocles.js'></script>
   <script type='text/javascript' src='script/home.js'></script>
 </head>
 <body>
