--- a/attachments/pages/recline.html
+++ b/attachments/pages/recline.html
@@ -6,18 +6,7 @@
   <link rel="stylesheet" href="style/reset.css" media="screen">
 	<link rel="stylesheet" href="style/data-table.css" media="screen"> 
 	<link rel="stylesheet" href="style/recline.css" media="screen">
-	<script type="text/javascript" src="script/lib/jquery-1.6.1.min.js"></script>	
-  <!-- only using jqueryui for draggable - a lighter solution would be nice -->
-	<script type="text/javascript" src="script/lib/jquery-ui-1.8.14.custom.min.js"></script>
-	<script type="text/javascript" src="script/lib/jquery.mustache.js"></script>
-	<script type="text/javascript" src="script/lib/jquery.couch2.js"></script>
-	<script type='text/javascript' src='script/lib/jquery.url.js'></script>
-	<script type="text/javascript" src="script/lib/jquery.hotkeys.js"></script>
-	<script type="text/javascript" src="script/lib/sammy-0.6.3.min.js"></script>
-	<script type="text/javascript" src="script/lib/underscore.js"></script>
-	<script type="text/javascript" src="script/lib/microevent.js"></script>
-	<script type="text/javascript" src="script/lib/traverse.js"></script>
-	<script type="text/javascript" src="script/lib/pouchdb.js"></script>
+	<script type="text/javascript" src="script/deps-min.js"></script>	
 	<script type="text/javascript" src="script/util.js"></script>
 	<script type="text/javascript" src="script/costco.js"></script>
 	<script type="text/javascript" src="script/recline.js"></script>
