better dataset display logic

--- a/attachments/pages/index.html
+++ b/attachments/pages/index.html
@@ -174,7 +174,7 @@ SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. -->
     {{#datasets}}
       <a class='download' href='{{url}}'>
         <li>
-          <h3>{{name}}</h3>
+          <h3>{{user}}/{{name}}</h3>
             <span class='icon osx'></span>
             <span class='count'>{{count}} documents</span>
             <span class='size'>{{size}}</span>
