add some iconic icon styles

--- a/attachments/pages/index.html
+++ b/attachments/pages/index.html
@@ -54,7 +54,7 @@ SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. -->
         Turn spreadsheets into APIs and share them with anyone in the world
       </li>
       <li>
-        <strong>Dataset Forking</strong><br/>
+        <span class="fork icon"></span><strong>Dataset Forking</strong><br/>
         Let others fork, edit and send you back enhanced versions of your data
       </li>
       <li class='last'>
@@ -95,17 +95,17 @@ SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. -->
       </a>
     </div>
     <div class="option user_settings">
-      <a href="#settings"><div class="icon"></div></a>
+      <a href="#settings"><div class="navIcon"></div></a>
     </div>
     <div class="option logout">
-      <a href="#logout"><div class="icon"></div></a>
+      <a href="#logout"><div class="navIcon"></div></a>
     </div>
   </script>
 
   <script type="text/mustache" class="loginButtonTemplate">
     <div class="right">
       <ul id="landing_nav">
-        <li><a href="#login" class="login">Log in with BrowserID</a></li>
+        <li><a href="#login" class="login">Log in with BrowserID&nbsp;<span class="rightarrow icon"></span></a></li>
       </ul>
     </div>
   </script>
