simplify login logic a bit

--- a/attachments/pages/index.html
+++ b/attachments/pages/index.html
@@ -204,7 +204,7 @@ SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. -->
   <script type="text/mustache" class="userActionsTemplate">
     <a href="#new">
       <div class="option new_dataset">
-        <div class="icon"></div>
+        <div class="navIcon"></div>
         New Dataset
       </div>
     </a>
