fix login state bug thingy

--- a/attachments/pages/index.html
+++ b/attachments/pages/index.html
@@ -42,7 +42,7 @@ SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. -->
 </head>
 <body>
   <div class='header limiter'>
-    <a href='' class='logo'></a>
+    <a href='/' class='logo'></a>
     <a href="http://www.github.com/maxogden/datacouch"><img class="notification-banner" src="style/images/ribbon.png"></a>
   </div>
   
