--- a/attachments/pages/recline.html
+++ b/attachments/pages/recline.html
@@ -80,7 +80,7 @@
     <li><a data-action="deleteRow" class="menuAction" href="JavaScript:void(0);">Delete this row</a></li>
   </script>
 
-  <script type='text/mustache' class="titleTemplate"><span id="project-name-button" class="app-path-section">{{name}}</span></script>
+  <script type='text/mustache' class="titleTemplate"><span id="project-name-button" class="app-path-section">{{user}}&nbsp;/ {{name}}</span></script>
   <script type='text/mustache' class="bulkTemplate">http://{{host}}/{{db_name}}/_bulk_docs</script>
   <script type='text/mustache' class="generatingTemplate"><div class="loading">Loading...</div></script>
   
