--- a/attachments/pages/index.html
+++ b/attachments/pages/index.html
@@ -41,8 +41,7 @@
 </head>
 <body>
   <div class='header limiter'>
-    <a href='/' class='logo'></a>
-    <a href="http://www.github.com/maxogden/datacouch"><img class="notification-banner" src="style/images/ribbon.png"></a>
+    <a href="http://www.github.com/maxogden/datacouch" class='logo'></a>
   </div>
   
   <div class="userControls"></div>
