add email disclaimer to login button

--- a/attachments/pages/index.html
+++ b/attachments/pages/index.html
@@ -106,6 +106,7 @@
     <div class="right">
       <ul id="landing_nav">
         <li><a href="#login" class="login">Log in with BrowserID&nbsp;<span class="rightarrow icon"></span></a></li>
+        <li class="disclaimer">Your email address will be publicly viewable by other users</li>
       </ul>
     </div>
   </script>
