adding welcome message to empty datasets

--- a/attachments/pages/recline.html
+++ b/attachments/pages/recline.html
@@ -154,6 +154,16 @@
           {{/cells}}
         </tr>
         {{/rows}}
+        {{^rows}}
+          <div class="gettingStarted">
+            <div class="welcomeMessage">
+              <h1>Hello there!</h1>
+              <p>You haven't uploaded any data yet. Check out the Import menu up top to get started.</p>
+            </div>
+            <img class="bigCouch" src="images/couch-big.png">
+            
+          </div>
+        {{/rows}}
       </tbody>
     </table>
   </script>
