--- a/attachments/pages/index.html
+++ b/attachments/pages/index.html
@@ -33,7 +33,7 @@
   <link rel='shortcut icon' href='images/favicon.ico' type='image/x-icon' />
   <link rel='stylesheet' media='all' href='style/reset.css' />
   <link rel='stylesheet' media='all' href='style/home.css' />
-  <link rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap-1.0.0.min.css">
+  <link rel="stylesheet" href="style/bootstrap.css">
   <script src="https://browserid.org/include.js" type="text/javascript"></script>
   <script type='text/javascript' src='script/deps-min.js'></script>
   <script type='text/javascript' src='script/util.js'></script>
