--- a/attachments/pages/index.html
+++ b/attachments/pages/index.html
@@ -216,14 +216,16 @@
           <dt>Owner</dt>
           <dd class="name">
             <a class="owner" href="{{user}}">{{user}}</a>&nbsp;/ <a class="dataset" href="edit#{{id}}">{{name}}</a>
-            {{#forkedFrom}}
-              <span class="forkedFrom"><span class="fork icon"></span>forked from <a href="{{forkedFromUser}}">{{forkedFromUser}}</a>&nbsp;/ <a class="dataset" href="{{forkedFrom}}">{{name}}</a></span>
-            {{/forkedFrom}}
             {{#nouns}}
               <a href="http://thenounproject.com/noun/{{noun}}/">{{{svg}}}</a>
             {{/nouns}}
           </dd>
           <dt>Details</dt>
+          <dd class="forkedFrom">
+            {{#forkedFrom}}
+              <span><span class="fork icon"></span>forked from <a href="{{forkedFromUser}}">{{forkedFromUser}}</a>&nbsp;/ <a class="dataset" href="{{forkedFrom}}">{{name}}</a></span>
+            {{/forkedFrom}}
+          </dd>
           <dd class="metadata subtitle">Created <span class="timeago" title="{{date}}"></span>, {{count}} documents, {{size}}</dd>
           <dt>Avatar</dt>
           <dd class="avatar"><a href="#/{{user}}"><img width="32" height="32" src="{{gravatar_url}}"></a></dd>
